[gd_scene load_steps=25 format=3 uid="uid://dnirqsybh7586"]

[ext_resource type="Script" path="res://scripts/office_player.gd" id="1_l5iv2"]
[ext_resource type="PackedScene" uid="uid://0rg0wy64v8m" path="res://scenes/global/interaction_icon.tscn" id="3_lhals"]
[ext_resource type="PackedScene" uid="uid://dil68rhg1rbv5" path="res://scenes/global/static_dialogue.tscn" id="4_3xol1"]
[ext_resource type="Texture2D" uid="uid://wmf0udxhwnwu" path="res://assets/office-player.png" id="4_plwdp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3247o"]
atlas = ExtResource("4_plwdp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi1rg"]
atlas = ExtResource("4_plwdp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_81poh"]
atlas = ExtResource("4_plwdp")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj7hu"]
atlas = ExtResource("4_plwdp")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_010cq"]
atlas = ExtResource("4_plwdp")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7c0b"]
atlas = ExtResource("4_plwdp")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fknx"]
atlas = ExtResource("4_plwdp")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl3ay"]
atlas = ExtResource("4_plwdp")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uc3p"]
atlas = ExtResource("4_plwdp")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1jvu"]
atlas = ExtResource("4_plwdp")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7anr"]
atlas = ExtResource("4_plwdp")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kygk"]
atlas = ExtResource("4_plwdp")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4omwr"]
atlas = ExtResource("4_plwdp")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lupsm"]
atlas = ExtResource("4_plwdp")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4d0wh"]
atlas = ExtResource("4_plwdp")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba1c4"]
atlas = ExtResource("4_plwdp")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdr2a"]
atlas = ExtResource("4_plwdp")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dneq4"]
atlas = ExtResource("4_plwdp")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nq7dy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3247o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi1rg")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_81poh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj7hu")
}],
"loop": true,
"name": &"idle_side",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_010cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7c0b")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fknx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl3ay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uc3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1jvu")
}],
"loop": true,
"name": &"walk_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7anr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kygk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4omwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lupsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4d0wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba1c4")
}],
"loop": true,
"name": &"walk_side",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdr2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dneq4")
}],
"loop": true,
"name": &"walk_up",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a8nmr"]
size = Vector2(10, 9)

[node name="OfficePlayer" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_l5iv2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_nq7dy")
animation = &"idle_up"
autoplay = "idle_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, 3.5)
shape = SubResource("RectangleShape2D_a8nmr")

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Camera2D")

[node name="StaticDialogue" parent="." instance=ExtResource("4_3xol1")]
offset = Vector2(48, 128)
transform = Transform2D(1, 0, 0, 1, 48, 128)

[node name="InteractionIcon" parent="." instance=ExtResource("3_lhals")]
visible = false
position = Vector2(0, -13)
